# MSc_FranciscoCampos_insta360

MonoSLAM/matlab_code/: mono_slam.m  updatems.m
MonoSLAM/sequences/: readme.txt
data/: IMU.ipynb  LinkDatasetsInsta360.txt  cave
msckf_insta/: CMakeLists.txt  package.xml
msckf_insta/datasets/: asl_msckf.cpp  asl_msckf_no_ground_truth.cpp
msckf_insta/launch/: euroc.launch
msckf_insta/src/: corner_detector.cpp  ros_interface.cpp
msckf_mono/: CMakeLists.txt
msckf_mono/datasets/: asl_msckf.cpp  asl_msckf_no_ground_truth.cpp  penncosy_readers.cpp
msckf_mono/euroc/: _readme.txt
msckf_mono/launch/: asl_msckf.launch  (+3 more)
msckf_mono_docker/: Dockerfile  _readme.md  container_create.sh  image_build.sh  vars.sh
proj/: _readme.txt  confirmation.m  confirmation_my.m  confirmation_my_data.mat  model.mat  mydata.m  mydata2_260222_020403.mat  mydata2_260222_021400.mat  mydata2_260222_022227.mat  mydata2_260222_182253.mat  mydata2_260222_183937.mat  mydata_251129_2050.mat  mydata_get.m  mydata_mk_struct.m  mydata_tst.m  myplot.m  plot_MD.m  plot_scene.m  plotx.m  rodrigues.m  show_results1.m  show_results2.m  world2camx.m  world2camx_cost.m  world2camx_params.m
proj_thin_prism/: _readme.txt  thinprism.c  thinprism.m  thinprismCOLMAP.py
ros_ws/src/loop_closure/: CMakeLists.txt  package.xml
ros_ws/src/loop_closure/config/: params.yaml
ros_ws/src/loop_closure/include/loop_closure/: keyframe_selector.hpp  loop_closure_node.hpp
ros_ws/src/loop_closure/launch/: loop_closure.launch
ros_ws/src/loop_closure/src/: loop_closure_main.cpp  loop_closure_node.cpp
(+11 files in other folders)
